--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ POSTGRES_PRISMA_URL="pglink"
 POSTGRES_URL_NON_POOLING="pglink"
 
 TINIFY_API_KEY="TINIFY"
+
+HOST="http://localhost:3000/"
+
+SECRET_KEY="SECRET"
