--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.10.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.2.0",
     "rimraf": "^3.0.2",
